# stuff

./: code_and_output.docx  relevant_pages.docx  rr_material_properties_v1.ipynb  test.docx  update_security_databases.ipynb  update_security_databases_v1.ipynb
automation_audit_cure_pcs/: pyproject.toml
automation_audit_cure_pcs/notebooks/exploratory/: cure_pc_audit_test.ipynb  get_cure_pc_info.ipynb
automation_audit_cure_pcs/notebooks/final/: get_cure_pc_info.ipynb
automation_audit_cure_pcs/src/automation_audit_cure_pcs/: __init__.py  __main__.py  config.py  pipeline.py
automation_audit_cure_pcs/src/automation_audit_cure_pcs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
automation_audit_cure_pcs/src/automation_audit_cure_pcs/utils/: cpc.py  network.py
automation_cure_alarm_email/: pyproject.toml
automation_cure_alarm_email/notebooks/: pyrometry_alarm_emails.ipynb
automation_cure_alarm_email/src/automation_cure_alarm_emails.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared_config/: pyproject.toml
shared_config/src/shared_config/: sql.py
shared_utils/: pyproject.toml
shared_utils/src/shared_utils/: sql.py
