[project]
name = "automation-cure-alarm-emails"
version = "0.1.0"
description = "Scheduled email of critical cure alarms recently triggered"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "pyodbc>=5.3.0",
    "shared-config>=0.1.0",
    "shared-utils>=0.1.0",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
cure-alarm-email = "automation_cure_alarm_email:main_cli"

[tool.uv.sources]
shared-config = { git = "https://github.northgrum.com/M67743/shared_config.git" }
shared-utils  = { git = "https://github.northgrum.com/M67743/shared_utils.git" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

