[project]
name = "shared_utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M67743", email = "Cody.McLaughlin@ngc.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.44",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
